Restrict horizontal scroll & adjust width of h2 container h2 container in about section adjusted to prevent wrapping, keeping "We're Castlemate" on one line.

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -206,7 +207,8 @@ blockquote {
     flex-direction: column;
 }
 .about-description h2 {
-    margin:0em;
+    width: max-content;
+    margin: 0em;
 }
 
 .about-description .btn {
